Split instructions for Java 15/16